third_party/rust/async-trait/tests/ui/missing-async-in-impl.stderr
error[E0195]: lifetime parameters or bounds on method `method` do not match the trait declaration
  --> tests/ui/missing-async-in-impl.rs:12:14
   |
5  |     async fn method();
   |              -------- lifetimes in impl do not match this method in trait
...
12 |     fn method() {}
   |              ^ lifetimes do not match method in trait
